@@ -61,13 +61,11 @@ int dotest(struct starpu_disk_ops *ops, void *param)
 
 	/* Initialize StarPU without GPU devices to make sure the memory of the GPU devices will not be used */
 	// Ignore environment variables as we want to force the exact number of workers
-	unsetenv("STARPU_NCUDA");
-	unsetenv("STARPU_NOPENCL");
-	unsetenv("STARPU_NMIC");
 	struct starpu_conf conf;
 	ret = starpu_conf_init(&conf);
 	if (ret == -EINVAL)
 		return EXIT_FAILURE;
+	conf.ignore_environment_variables = 1;
 	conf.ncpus = 1;
 	conf.ncuda = 0;
 	conf.nopencl = 0;
