@@ -19,14 +19,6 @@
 
 #include "../../helper.h"
 
-#if !defined(STARPU_HAVE_UNSETENV)
-#warning unsetenv is not defined. Skipping test
-int main(void)
-{
-	return STARPU_TEST_SKIPPED;
-}
-#else
-
 /*
  * Users can directly control drivers by using the starpu_driver* functions.
  *
@@ -228,6 +220,7 @@ static int test_opencl(void)
 	};
 
 	starpu_conf_init(&conf);
+	conf.ignore_environment_variables = 1;
 	conf.n_not_launched_drivers = 1;
 	conf.not_launched_drivers = &d;
 	conf.ncpus = 1;
@@ -276,11 +269,6 @@ int main(void)
 {
 	int ret = STARPU_TEST_SKIPPED;
 
-	// Ignore environment variables as we want to force the exact number of workers
-	unsetenv("STARPU_NCUDA");
-	unsetenv("STARPU_NOPENCL");
-	unsetenv("STARPU_NCPUS");
-
 #ifdef STARPU_USE_CPU
 	ret = test_cpu();
 	if (ret == 1)
@@ -298,4 +286,3 @@ int main(void)
 #endif
 	return ret;
 }
-#endif
